# zju_courses

CN_Lab7/: README.md
CN_Lab7/documents/: Lab7-基于Socket接口实现自定义协议通信-2019.doc  README.md  ~$b7-基于Socket接口实现自定义协议通信-2019.doc
CN_Lab7/example/ex1/: client  client.cpp  server  test  test.c  (+1 more)
CN_Lab7/src/: client.c  func_cli.c  func_cli.h  func_ser.c  func_ser.h  protocol.c  protocol.h  server.c  test.c
CV/hw_1/: schedule.md
CV/hw_2/: README.md
CV/hw_3/: README.md  schedule.md
CV/hw_4/: cv hw_4.md
MIPS-Simulator/: MIPS_c.py  MIPS_r.py  debug.py  main.py  readme.txt
OOP/FirstAssignment/: CMakeLists.txt  OOP第一次作业.md  student.cpp  student.h
OOP/FourthAssignment/: CMakeLists.txt  readme.txt  test.sh
OOP/SecondAssignment/: CMakeLists.txt  a.out  data.txt  main.cpp  readme.txt  student.cpp  student.h  test.cpp
OOP/Serialization/: CMakeLists.txt  README.md
OOP/Serialization/conf/: int.xml  list.xml  map.xml  pair.xml  ptr.xml  set.xml  string.xml  user.xml  vector.xml
OOP/Serialization/src/: main.cpp  serialization.h
OOP/SixthAssignment/: CMakeLists.txt  SixthAssignment  Vector.cpp  Vector.h  main.cpp
OOP/ThirdAssignment/: CMakeLists.txt  Castle.cpp  Castle.h  Room.cpp  Room.h  a.out  data.txt  main.cpp  readme.txt
軟件工程基礎/COVID-G6/: README.md  config.py  launch.sh
軟件測試/AETG/: 2-way.csv  3-way.csv  CMakeLists.txt  README.md  func.cpp  func.h  main.cpp  test.cpp  test.csv  utility.cpp  utility.h
軟件測試/baiduManipulation/: README.md  Urls.csv  main.py  requirements.txt  utils.py
軟件需求工程/StudyInCao_frontEnd/: README.md  package-lock.json  package.json
(+155 files in other folders)
